syntax = "proto3";

package zeth_proto;

import "zeth/api/ec_group_messages.proto";

message VerificationKeyGROTH16 {
    Group1Point alpha_g1 = 1;
    Group2Point beta_g2 = 2;
    Group2Point delta_g2 = 4;
    string abc_g1 = 5;
}

message ExtendedProofGROTH16 {
    Group1Point a = 1;
    Group2Point minus_b = 2;
    Group1Point c = 3;
    string inputs = 4;
}
